@@ -35,3 +35,7 @@ Define local and public variables in environments with tests
 Procedure
 DoProcedureCommand
 Parse do with initial tests
+Parse do procedure without parameters w/test
+Parse do procedure with parameters w/test
+PublicCommand
+Parse public var1,var2 w/test
